@@ -5,3 +5,6 @@
 <p>There are three amazing levels named easy, medium, and hard. You will find 30 seconds to fight against a dinosaur in every game. Every correct shoot will give you 5 points.</p>
 <p>There are three amazing levels named easy, medium, and hard. You will find 30 seconds to fight against a dinosaur in every game. Every correct shoot will give you 5 points.</p>
 <p>The source code is provided in the master branch. This is the first game I have ever made.</p>
+
+<p>Executable jar file : https://drive.google.com/file/d/1mr-T3RMJSJt9qDkR3twhutELNbxMkvou/view?usp=sharing</p>
+<p>Command prompt to run this jar file : java --module-path "your_javafx_path\java fx\javafx-sdk-20.0.1\lib" --add-modules javafx.controls,javafx.fxml,javafx.graphics,javafx.media -jar SaveEra.jar</p>
